2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c (create_dialog),
	background-properties.glade: Add mnemonics.
	(main): Set title to "Background Preferences".

2002-03-21  Seth Nickell  <snickell@stanford.edu>

	* background-properties-capplet.c: (main):

	Set the window icon.

2002-03-21  Seth Nickell  <snickell@stanford.edu>

	* background-properties-capplet.c: (string_to_orientation),
	(update_color_widget_labels_and_visibility),
	(peditor_value_changed), (setup_dialog), (create_dialog):
	* background-properties.glade:

	Recapture some of the more subtle interactions of "Seth's UI".
	Change colour labels when the gradient orientation changes,
	and use mnemonics so the capplet is accessible. Pad and space
	as designed.

	There are still at least two things wrong:

	1) Havoc & Jonathan convinced me that the large button with
	   label was wrong. This should instead look like:
	   http://beauty.stanford.edu/bg_button.png
	   The new format should be right for all image selectors, the
	   old mechanism had serious usability problems.
	2) "No Picture" should be the first toggle

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c:
	(everywhere): Use an ApplierSet instead of passing around
	BGPreferences.
	(real_realize_cb): Call applier_set_redraw.
	(peditor_value_changed): Merge entry in set->prefs,
	and call applier_set_redraw if realized. Also, hide the second
	color option if shading type is solid.
	(setup_dialog): Set data for the second color selector.
	Also, update peditors for new UI.
	(create_dialog): Add previews and labels to radio buttons.
	(main): Create applier set. Also, connect to DnD signals.

	* background-properties.glade: Implement seth's new UI.
	
2002-03-14  Richard Hestilow  <hestilow@ximian.com>

	* background-properties-capplet.c (setup_dialog): Use new enum
	peditors, and convert to using the #defined gconf keys from
	preferences.h.
