@@ -1,3 +1,12 @@
+Mon Apr  1 19:19:39 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* background-properties-capplet.c (dialog_button_clicked_cb):
+	handle GTK_RESPONSE_DELETE_EVENT
+
+	* Makefile.am (bin_PROGRAMS):
+	s/gnome2-background-properties/gnome-background-properties
+	
+
 2002-03-28  Richard Hestilow  <hestilow@ximian.com>
 
 	* background-properties-capplet.c (create_dialog),
